--- a/ComputerVision/PA3_Image_Harmonization/.gitignore
+++ b/ComputerVision/PA3_Image_Harmonization/.gitignore
@@ -4,3 +4,4 @@ PA3/data/__pycache__/
 PA3/models/__pycache__/
 PA3/options/__pycache__/
 PA3/util/__pycache__/
+PA3/dataset/Image_Harmonization_Dataset
